--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   "private": false,
   "dependencies": {
     "@curvefi/api": "^2.42.0",
-    "@rainbow-me/rainbowkit": "^0.12.9",
     "autoprefixer": "^10.4.13",
+    "bs58": "^5.0.0",
     "dotenv": "^16.0.3",
-    "ethers": "^5.7.2",
     "find-config": "^1.0.0",
     "jotai": "^2.0.1",
     "next": "^13.3.4",
     "rc-tooltip": "^5.2.2",
-    "wagmi": "^0.12.0",
+    "viem": "^1.5.3",
+    "wagmi": "^1.3.9",
     "wido": "^0.3.5"
   },
   "devDependencies": {
