--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "RedVeil",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "build": "yarn tsc"
+  },
   "dependencies": {
     "@curvefi/api": "^2.42.0",
     "autoprefixer": "^10.4.13",
@@ -15,16 +18,15 @@
     "jotai": "^2.0.1",
     "next": "^13.3.4",
     "rc-tooltip": "^5.2.2",
+    "typescript": "^5.1.6",
     "viem": "^1.5.3",
     "wagmi": "^1.3.9",
     "wido": "^0.3.5"
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
-    "@types/react": "^18.0.9",
     "eslint": "^8.15.0",
     "eslint-config-next": "^13.3.4",
-    "prettier": "^2.8.8",
-    "typescript": "^4.9.4"
+    "prettier": "^2.8.8"
   }
 }
