--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "yarn tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "dependencies": {
     "@curvefi/api": "^2.42.0",
@@ -24,9 +25,12 @@
     "wido": "^0.3.5"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.3",
     "@types/node": "^17.0.35",
     "eslint": "^8.15.0",
     "eslint-config-next": "^13.3.4",
-    "prettier": "^2.8.8"
+    "jest": "^29.6.2",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.1"
   }
 }
