--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
+    "@viem/anvil": "^0.0.6",
     "eslint": "^8.15.0",
     "eslint-config-next": "^13.3.4",
     "prettier": "^2.8.8",
