--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2021",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "types": [],
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
@@ -18,7 +16,10 @@
     "baseUrl": ".",
     "paths": {
       "@/lib/*": ["./lib/*"],
-    }
+    },
+    "outDir": "dist",
+    "sourceMap": true,
+    "declaration": true
   },
   "include": ["src","lib"],
   "exclude": ["node_modules"]
