--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "private": false,
   "type": "module",
   "scripts": {
-    "build": "tsc && babel ./src --out-dir ./dist --extensions \".ts,.js\" --copy-files",
+    "clean": "rimraf dist",
+    "build": "yarn run clean && yarn run build:cjs && yarn run build:esm && yarn run build:types",
+    "build:cjs": "tsc --project tsconfig.build.json --module commonjs --outDir ./dist/cjs --removeComments --verbatimModuleSyntax false && echo > ./dist/cjs/package.json '{\"type\":\"commonjs\"}'",
+    "build:esm": "tsc --project tsconfig.build.json --module es2015 --outDir ./dist/esm && echo > ./dist/esm/package.json '{\"type\":\"module\",\"sideEffects\":false}'",
+    "build:types": "tsc --project tsconfig.build.json --module esnext --declarationDir ./dist/types --emitDeclarationOnly --declaration --declarationMap",
     "test": "vitest run"
   },
   "dependencies": {
@@ -40,6 +44,7 @@
     "eslint": "^8.15.0",
     "eslint-config-next": "^13.3.4",
     "prettier": "^2.8.8",
+    "rimraf": "^5.0.1",
     "vitest": "^0.34.1"
   }
 }
