--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,16 @@
+// taken from viem: https://github.com/wagmi-dev/viem/blob/d28a5f2814d3941ec5fb92b912a6d3f48bf40a5d/tsconfig.json
 {
+  // This configuration is used for local development and type checking.
+  "extends": "./tsconfig.base.json",
+  "include": [
+    "src"
+  ],
+  "exclude": [],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ],
   "compilerOptions": {
     "target": "ES2021",
     "lib": ["dom", "dom.iterable", "esnext"],
