--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@curvefi/api": "^2.42.0",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.5.0",
     "bs58": "^5.0.0",
     "dotenv": "^16.3.1",
     "find-config": "^1.0.0",
