--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,13 +3,14 @@
     // This file is used to compile the for cjs and esm (see package.json build scripts). It should exclude all test files.
     "extends": "./tsconfig.base.json",
     "include": [
-        "src"
+        "src",
+        "lib"
     ],
     "exclude": [
         "test/**/*",
     ],
     "compilerOptions": {
         "sourceMap": true,
-        "rootDir": "./src"
+        "rootDir": "."
     }
 }
