--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
   // This configuration is used for local development and type checking.
   "extends": "./tsconfig.base.json",
   "include": [
-    "src"
+    "src",
+    "lib",
   ],
   "exclude": [],
   "references": [
