--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,4 @@
-// taken from viem: https://github.com/wagmi-dev/viem/blob/d28a5f2814d3941ec5fb92b912a6d3f48bf40a5d/tsconfig.json
 {
-  // This configuration is used for local development and type checking.
-  "extends": "./tsconfig.base.json",
-  "include": [
-    "src",
-    "lib",
-  ],
-  "exclude": [],
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
-    }
-  ],
   "compilerOptions": {
     "target": "ES2021",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -37,6 +24,8 @@
     "declaration": true,
     "emitDeclarationOnly": true,
   },
-  "include": ["src","lib"],
+  "include": [
+    "src"
+  ],
   "exclude": ["node_modules"]
 }
