--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "jotai": "^2.0.1",
     "next": "^13.3.4",
     "rc-tooltip": "^5.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.1.6",
     "viem": "^1.5.3",
     "wagmi": "^1.3.9",
