--- a/.babelrc
+++ b/.babelrc
@@ -25,6 +25,7 @@
             }
         ],
         "@babel/plugin-proposal-class-properties",
-        "@babel/plugin-proposal-object-rest-spread"
+        "@babel/plugin-proposal-object-rest-spread",
+        ["@babel/plugin-syntax-import-attributes", {"deprecatedAssertSyntax":true}]
     ]
 }
