--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vaultcraft-sdk",
-  "version": "0.0.2",
+  "version": "0.0.15",
   "description": "TypeScript library for VaultCraft",
   "main": "dist/index.js",
   "types": "./dist/index.d.ts",
@@ -15,6 +15,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@babel/plugin-syntax-import-attributes": "^7.22.5",
     "@curvefi/api": "^2.42.0",
     "autoprefixer": "^10.4.13",
     "axios": "^1.5.0",
