--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-config-next": "^13.3.4",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
+    "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.1"
   }
 }
