--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "yarn run clean && tsc && babel ./src --out-dir ./dist --extensions \".ts,.js\" --copy-files",
-    "test": "vitest yieldOptions"
+    "test": "vitest run"
   },
   "dependencies": {
     "@babel/plugin-syntax-import-attributes": "^7.22.5",
