config(apy): set base branch

--- a/.github/workflows/apy.yml
+++ b/.github/workflows/apy.yml
@@ -25,3 +25,5 @@ jobs:
             command: node scripts/apy-cache.js
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
+        with:
+          branch: apy-data-cache
