--- a/package.json
+++ b/package.json
@@ -17,29 +17,18 @@
     "test:integration": "vitest run integration"
   },
   "dependencies": {
-    "@babel/plugin-syntax-import-attributes": "^7.22.5",
-    "@curvefi/api": "^2.42.0",
-    "autoprefixer": "^10.4.13",
     "axios": "^1.5.0",
-    "bs58": "^5.0.0",
     "dotenv": "^16.3.1",
-    "find-config": "^1.0.0",
-    "jotai": "^2.0.1",
-    "next": "^13.3.4",
     "node-cache": "^5.1.2",
-    "rc-tooltip": "^5.2.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.1.6",
-    "viem": "^1.5.3",
-    "wagmi": "^1.3.9",
-    "wido": "^0.3.5"
+    "viem": "^1.5.3"
   },
   "devDependencies": {
+    "typescript": "^5.1.6",
     "@babel/cli": "^7.22.10",
     "@babel/core": "^7.22.11",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-syntax-import-attributes": "^7.22.5",
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-typescript": "^7.22.11",
     "@types/node": "^17.0.35",
