--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "yarn run clean && tsc && babel ./src --out-dir ./dist --extensions \".ts,.js\" --copy-files",
     "test": "vitest run",
     "test:unit": "vitest run unit",
-    "test:integration": "vitest run integration"
+    "test:integration": "vitest run integration",
+    "test:stargate": "vitest run stargate"
   },
   "dependencies": {
     "axios": "^1.5.0",
