--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.1"
+    "vitest": "^0.34.1",
+    "@curvefi/api": "^2.42.0"
   }
 }
