--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "rimraf": "^5.0.1",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.1",
-    "@curvefi/api": "^2.42.0"
+    "@curvefi/api": "2.49.1"
   }
 }
