--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vaultcraft-sdk",
-  "version": "0.1.14",
+  "version": "0.1.15",
   "description": "TypeScript library for VaultCraft",
   "main": "dist/index.js",
   "types": "./dist/index.d.ts",
@@ -21,7 +21,8 @@
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "node-cache": "^5.1.2",
-    "viem": "^1.5.3"
+    "viem": "^1.5.3",
+    "@curvefi/api": "2.44.0"
   },
   "devDependencies": {
     "typescript": "^5.1.6",
@@ -40,7 +41,6 @@
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.1",
-    "@curvefi/api": "2.44.0"
+    "vitest": "^0.34.1"
   }
 }
