--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test": "vitest run",
     "test:unit": "vitest run unit",
     "test:integration": "vitest run integration",
-    "test:yieldOptions": "vitest run yieldOptions"
+    "test:yieldOptions": "vitest run yieldOptions",
+    "test:deployment": "vitest run deployment"
+
   },
   "dependencies": {
     "axios": "^1.5.0",
