--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vaultcraft-sdk",
-  "version": "0.1.27",
+  "version": "0.1.28",
   "description": "TypeScript library for VaultCraft",
   "main": "dist/index.js",
   "types": "./dist/index.d.ts",
@@ -15,7 +15,9 @@
     "test": "vitest run",
     "test:unit": "vitest run unit",
     "test:integration": "vitest run integration",
-    "test:yieldOptions": "vitest run yieldOptions"
+    "test:yieldOptions": "vitest run yieldOptions",
+    "test:yearn": "vitest run yearn"
+
   },
   "dependencies": {
     "axios": "^1.5.0",
